增加makefile 文件 修改用户信息文档
